# kafka_demo

./: Kafka.drawio  README.md  alembic.ini  docker-compose.yml  pyproject.toml
kafka_demo/: conftest.py  main.py
kafka_demo/db/: base.py  crud.py  meta.py  utils.py
kafka_demo/db/migrations/: env.py
kafka_demo/db/migrations/versions/: 2022-03-17-11-53_56b88ff75648.py
kafka_demo/db/models/: __init__.py  ticket.py
kafka_demo/db/repos/: ticket_repo.py
kafka_demo/services/: __init__.py  utils.py
kafka_demo/services/kafka/: consumer.py  lifetime.py  producer.py
kafka_demo/settings/: __init__.py  config.py
kafka_demo/settings/environments/: base.py  dev.py
kafka_demo/tests/: __init__.py  conftest.py  utils.py
kafka_demo/tests/test_unit/test_api/: conftest.py  test_catalog.py  test_health.py
kafka_demo/tests/test_unit/test_db/: test_crud.py
kafka_demo/tests/test_unit/test_db/test_repos/: test_characteristic_repo.py
kafka_demo/web/: __init__.py  application.py  lifetime.py
kafka_demo/web/api/: __init__.py  dependencies.py  router.py
kafka_demo/web/api/docs/: __init__.py
kafka_demo/web/api/kafka/: __init__.py  schema.py  views.py
kafka_demo/web/api/monitoring/: __init__.py  views.py
