[tool.poetry]
name = "kafka-demo"
version = "0.1.0"
description = ""
authors = ["Anton <Kondrahin210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.0"
pydantic = {version = "^1.8.2", extras = ["dotenv"]}
#yarl = "^1.6.3"
#ujson = "^4.2.0"
SQLAlchemy = {version = "^1.4", extras = ["mypy", "asyncio"]}
alembic = "^1.6.5"
asyncpg = {version = "^0.27.0", extras = ["sa"]}
aiofiles = "^0.7.0"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
asyncstdlib = "^3.10.3"
#httpx = "^0.22.0"
#asgi-lifespan = "^1.0.1"
#fastapi_keycloak = "^1.0.4"
greenlet = "^1.1.2"
#sentry-sdk = "^1.9.5"
yarl = "^1.8.2"
aiokafka = "^0.8.0"
ujson = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
